backend01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-v1
  template:
    metadata:
      labels:
        app: backend-v1
    spec:
      containers:
        - name: backend-v1
          image: raulmoya/dockerback:2.0.0 # ponemos una mia del docker, cogemos del ejercicio docker ponemos esta de mientras 
          ports:
            - containerPort: 80
