frontend01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-v1
  template:
    metadata:
      labels:
        app: frontend-v1
    spec:
      containers:
      - name: frontend-v1
        image: raulmoya/dockerfront:2.0.0 # cogemos una mia 
        ports:
        - containerPort: 80
