frontend02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-v2
  template:
    metadata:
      labels:
        app: frontend-v2
    spec:
      containers:
      - name: frontend-v2
        image: raulmoya/dockerfront:v2.0.0
        ports:
        - containerPort: 80
