backend01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-v1-service
spec:
  type: NodePort
  selector:
    app: backend-v1
  ports:
    - port: 80
      targetPort: 80
