backend02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-v2-service
spec:
  type: NodePort
  selector:
    app: backend-v2
  ports:
    - port: 80
      targetPort: 80
