frontend01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-v1-service
spec:
  type: NodePort
  selector:
    app: frontend-v1
  ports:
    - port: 80
      targetPort: 80
