frontend02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-v2-service
spec:
  type: NodePort
  selector:
    app: frontend-v2
  ports:
    - port: 80
      targetPort: 80
